@@ -1,3 +1,9 @@
+2002-10-02  John Levon  <levon@movementarian.org>
+
+	* Makefile.in: use -P to strip dead dirs on dist
+ 
+	* dae/opd_parse_proc.c: spacing
+
 2002-10-02  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libdb/db-*.c/*.h: typedef tweaking for 64 bits arch
